--- a/sarkanyok.css
+++ b/sarkanyok.css
@@ -16,6 +16,10 @@ a:hover {
 
 .jobbrakep {
     float: right;
+    width: 300px;
+    height: 300px;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 body {
     text-align: justify;
